# forestbot

./: .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  .prettierrc  .ruff.toml  .vercelignore  README.md  audit.json  eslint.config.mjs  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
api/: index.py
app/: page.tsx
backend/: app.py  requirements.txt
backend_fastapi/: app.py  gunicorn_config.py  pydantic_base.py  pyproject.toml  requirements.txt
backend_fastapi/entities/: api_router.py
backend_fastapi/entities/chat/: gpt_passthrough_service.py  rag_service.py  router.py
backend_fastapi/services/: call_rag.py  gpt_passthrough.py
backend_flask/: app.py  requirements.txt
pdf/: Convergence Plan_for_Chat_Bot.xlsx  Library_for_chat_bot_ EDAP 2020 EDF 2021.xls  Library_for_chat_bot_public_doc.xls
python/: Call_RAG.py  Evaluate RAGAS testset.ipynb  Generate_testset_RAGAS.ipynb  Generate_vectorstore.py  basic_RAG notebook (used to test code).ipynb  streamlit_chatbot.py
python_workspace/: Call_RAG.py  Evaluate RAGAS testset.ipynb  Generate_testset_RAGAS.ipynb  Generate_vectorstore.py  basic_RAG notebook (used to test code).ipynb  evaluation_dataset for RAG1.csv  evaluation_dataset.csv  pyproject.toml  requirements.txt
python_workspace/Evaluation (RAGAS)/: Evaluate RAGAS testset.ipynb  Generate_testset_RAGAS.ipynb  evaluation_dataset for RAG1.csv  evaluation_dataset_LLAMA3.csv
python_workspace/Evaluation Giskard/: Compare different RAG.ipynb  Generation of TestSet with limited pdf.ipynb  [OLD] Generation of TEST Set + many tests.ipynb  knowledge_base.csv  model_scan_results_advanced.html  model_scan_results_basic.html  my_testset.jsonl  reduce_testset.csv  reduce_testset.jsonl  testset.csv  testset.jsonl
python_workspace/Evaluation Giskard/.ipynb_checkpoints/: Evaluation with Giskard-checkpoint.ipynb
python_workspace/Evaluation Giskard/OFAC_report with Basic RAG/: agent_answer.json  knowledge_base.jsonl  knowledge_base_meta.json  metrics_results.json  report.html  report_details.json  testset.json
python_workspace/RAG2_advanced/: Call_RAG_advanced.ipynb
python_workspace/RAG_Basic/: Basic_RAG notebook (used to develop the code).ipynb  Call_RAG.py
python_workspace/RAG_Guillaume/: Call_RAG_advanced.ipynb  Call_RAG_advanced.py  Test LLAMA3 and GROQ.ipynb  Test RAG fonction manually.ipynb
python_workspace/vectorstore/chroma/5cd2d2d6-80a1-4862-bf67-d44a795c10f1/: index_metadata.pickle
python_workspace/vectorstore_generation/: Generate_vectorstore.py
src/api/: index.py
src/app/: layout.tsx  page.tsx
src/app/components/Chat/: Messages.tsx  index.tsx
streamlit_app/: Call_RAG.py  pyproject.toml  requirements.txt  streamlit_chatbot.py
streamlit_app/vectorstore/chroma/8b3c2a01-ca0b-40d5-a948-8101076ca2b2/: index_metadata.pickle
ui/: package.json  tailwind.config.js
ui/app/: page.tsx
ui_next/: next.config.js  package-lock.json  package.json
ui_next/app/: layout.tsx  page.tsx
ui_next/app/components/Chat/: Messages.tsx  index.tsx
vectorstore/chroma/: chroma.sqlite3
