[tool.poetry]
name = "forestbot root"
version = "0.1.0"
description = ""
authors = ["Guillaume Soto", "Tony Lopes", "Connor Haines"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
